[metadata]
name = textx-dsldoc
version = attr: textx_dsldoc.__version__
description = Autogeneration of DSL documentation for TextX
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/textx-dsldoc
license = GPL
keywords = textx subcommand, doc generation
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = textx_dsldoc
install_requires =

[options.entry_points]
textx_commands =
    autodoc = textx_dsldoc:autodoc


[zest.releaser]
create-wheel = yes
python-file-with-version = textx_dsldoc/__init__.py
